brat/test/golden/error/vecpat.brat.golden
Error in test/golden/error/vecpat.brat@FC {start = Pos {line = 3, col = 5}, end = Pos {line = 3, col = 17}}:
fst3(nil) = none
    ^^^^^^^^^^^^

  Branch cannot be reached

